personnalisation des request de validation et suppression de statutL pour livres
